bugfix: once request films. checkbox without films. icon-save allways visible. popup-error

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -114,10 +114,11 @@
   background-image: url("../../images/movie-save.svg");
   top: 14px;
   right: 14px;
-  z-index: 5;
+  z-index: 50;
   background-repeat: no-repeat;
   background-position: center;
   transition: background-color .2s ease-in, background-image .2s ease-in, transform .2s ease-in;
+  visibility: visible;
 }
 
 .card__saved:hover {
